--- a/framer_clone_site_updated/contact.html
+++ b/framer_clone_site_updated/contact.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Дом</a></li>
-                <li><a ref="about.html">О нас</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="services.html">Услуги</a></li>
                 <li><a href="contact.html">Контакт</a></li>
             </ul>
