--- a/framer_clone_site_updated/services.html
+++ b/framer_clone_site_updated/services.html
@@ -24,8 +24,13 @@
     </header>
 
     <div class="container">
-        <h1>Наши услуги</h1>
-        <p>Список наших услуг.</p>
+<h2>Наши услуги</h2>
+<ul>
+    <li><strong>Сайт-визитка</strong> — Простой, стильный сайт, идеально подходит для презентации услуг. Цена: <strong>$$</strong></li>
+    <li><strong>Расширенный сайт</strong> — Дополнительный функционал, адаптация под мобильные устройства. Цена: <strong>$$$</strong></li>
+    <li><strong>Профессиональный сайт</strong> — Подключение базы данных, сложные интерактивные элементы. Цена: <strong>$$$$</strong></li>
+</ul>
+
     </div>
 
     <footer>
